# pySimNMR

./: .gitignore  Makefile  README.md  README_OVERLAY.txt  eta_test.txt  fit_freq_powder_spectrum.py  fit_freq_powder_spectrum_devel.py  fit_freq_spectrum_multisite.py  fit_test_input_data_2ndord.txt  fvsH_75As_LiFeAs.txt  isotopeDict.py  plot_elevels_vs_field.py  plot_field_powder_spectrum.py  plot_field_spectrum_multisite.py  plot_freq_powder_spectrum.py  plot_freq_spectrum_multisite.py  plot_freq_spectrum_multisite_old.py  plot_freq_vs_angle.py  plot_freq_vs_eta.py  plot_freq_vs_field.py  pySimNMR.py  pySimNMR_change_log.txt  pySimNMR_references.bib  pyproject.toml  pytest.ini  setup_venv.bat  setup_venv.sh  sitecustomize.py  trans_indexing_testing.txt
doc/: Makefile  build_manual.sh  legacy_migration_plan.md  pySimNMR_manual.tex  references.bib
examples/: elevels_vs_field.py  field_fit_multisite.py  field_fit_powder_ed.py  field_fit_powder_modern.py  field_powder_ed.py  field_powder_modern.py  freq_fit_multisite.py  freq_fit_powder_modern.py  freq_fit_powder_perturbative.py  freq_powder_modern.py  freq_powder_perturbative.py  freq_vs_angle.py  freq_vs_eta.py  freq_vs_field.py  hyperfine_distribution_xy_plane.py  hyperfine_uniform_xy_plane_73Ge.py  internal_field_powder_xy_plane.py
pysimnmr/: __init__.py  config_aliases.py  config_loader.py  config_schema.py  core.py  field_cli.py  field_fit.py  field_simulation.py  freq_cli.py  freq_fit.py  freq_simulation.py  hyperfine_cli.py  hyperfine_distribution.py  isotopeDict.py  plotly_utils.py  plotting.py  progress.py  (+9 more)
(+62 files in other folders)
